# gazebo_beep

./: .gitignore  CMakeLists.txt  README.md  bethany.sdf  building_robot.sdf  debug_world.sdf  empty_world.sdf  motor_cmd.sh  motor_plugin.cpp  proto_beep.sdf  torus.stl  wheel_mesh.py
launch/: config.yaml  launch.sh
models/: bethany.sdf  debug_world.sdf  empty_world.sdf  test_hawworth.sdf
moon/: model.sdf  test.sdf
src/: data_motor_plugin.cpp  motor_plugin.cpp  theory_motor_plugin.cpp
